# targeted-causal-reduction

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
targeted_causal_reduction/: __init__.py  __main__.py  config.py  parser.py
targeted_causal_reduction/causal_model/: __init__.py  high_level.py  low_level.py
targeted_causal_reduction/data_generators/: __init__.py  linear.py  mass_spring.py
targeted_causal_reduction/data_generators/n_well/: base.py  double_well.py  triple_well.py
targeted_causal_reduction/data_generators/processing/: core.py  disk.py  hdf5_dataset.py  in_memory.py
targeted_causal_reduction/lightning/: __init__.py  targeted_causal_reduction.py  utils.py
targeted_causal_reduction/reduction/: __init__.py  reduction.py  reduction_map.py
targeted_causal_reduction/simulator/: simulator.py
tests/: test_main.py
